meshi test